# leoconforti.us

./: .gitignore  cabal.project  flake.nix  index.html  leoconforti-us.cabal  site.hs  watch.sh
.github/workflows/: deploy.yml
css/: clay.hs  colorscheme.css  default.css
posts/: 2022-08-23-a-first-hegg-tutorial.md  2023-01-01-monthly-update-on-a-haskell-game-engine.md  2023-06-21-haskell-unicode-syntax-vim.md  2023-10-02-ghc-toolchain.md  2023-11-10-creating-a-macos-app-with-haskell-and-swift.md  2023-11-30-computed-properties-for-haskell-records.md  2024-04-02-calling-haskell-from-swift.md  2024-08-14-planning-a-workout-week-with-100-lines-of-haskell.md  2025-04-25-unsure-calculator-in-100-lines-of-haskell.md  2025-07-05-packaging-a-haskell-library-as-a-swift-binary-xcframework.md
templates/: all-posts.html  default.html  header.html  music.html  post.html  posts-tagged-x.html  posts.html  publications.html
