cabal-version:      2.4
version:            0
name:               leoconforti-us
author:             Leo Conforti
maintainer:         leo@leoconforti.us
build-type:         Simple

executable site
  main-is:          site.hs

  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , hakyll-images
                  , pandoc
                  , skylighting
                  , clay
                  , containers
                  , blaze-html
                  , blaze-markup
                  , bytestring
                  , filepath
                  , text
                  , time
                  , yaml
                  , mtl
                  , haskeline
                  , transformers
                  , exceptions
                  , directory
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

-- executable clay-css
--   main-is:          css/clay.hs
--   build-depends:    base == 4.*
--                   , clay
--                   , text
--   default-language: Haskell2010
